base/infrastructure/tailscale/egress/media/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media-web
  namespace: infrastructure
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`media.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: media-egress
          port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media-websecure
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`media.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: media-egress
          port: 8096
  tls:
    secretName: media-tls
